<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" android:layout_gravity="center">

    <Button android:id="@+id/create_challenge_block" android:text="@string/create_challenge"
        android:background="@color/background_main_green" android:onClick="onClickCreateChallenge" style="@style/MainBlock"/>
    <Button android:id="@+id/browse_challenges_block" android:text="@string/discover_challenges" style="@style/MainBlock"
        android:layout_toRightOf="@id/create_challenge_block" android:layout_toEndOf="@id/create_challenge_block"
        android:layout_centerHorizontal="true" android:background="@color/background_main_blue" android:onClick="onClickBrowseChallenges"/>
    <Button android:id="@+id/rankings_block" android:text="@string/rankings" android:layout_below="@id/create_challenge_block"
        android:background="@color/background_main_orange" style="@style/MainBlock" android:onClick="onClickRankings"/>
...
